--- a/about.html
+++ b/about.html
@@ -1,12 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 <body>
     <main>
-    <img src="./fichier/back1 copy.png" alt="backgame"  width="790px" />
-    <hr>
-    <br>
-    <video src="./fichier/vide oplayback.mp4" type="video/mp4"  width="500px" controls>
-        votre browser ne prend en charge
-    </video>
-</main>
+        <img src="./fichier/back1 copy.png" alt="backgame"  width="790px" />
+        <hr>
+        <br>
+        <video src="./fichier/vide oplayback.mp4" type="video/mp4"  width="500px" controls>
+            votre browser ne prend en charge
+        </video>
+    </main>
 </body>
 </html>
